--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -7,19 +7,9 @@
   <form #form="ngForm" novalidate>
     <div class="form-group">
       <label for="mail" class="form-label">Email</label>
-      <input
-        id="mail"
-        type="email"
-        placeholder="Email"
-        name="mail"
-        autocomplete="username"
-        [(ngModel)]="email"
-        #mail="ngModel"
-        class="form-control"
-        required
-        [class.is-valid]="mail.valid && mail.dirty"
-        [class.is-invalid]="mail.invalid && mail.dirty"
-      />
+      <input id="mail" type="email" placeholder="Email" name="mail" autocomplete="username" [(ngModel)]="email"
+        #mail="ngModel" class="form-control" required [class.is-valid]="mail.valid && mail.dirty"
+        [class.is-invalid]="mail.invalid && mail.dirty" />
       <div *ngIf="mail.invalid && mail.dirty" class="invalid-feedback d-block">
         <span *ngIf="mail.hasError('required')">This field is required</span>
       </div>
@@ -27,33 +17,15 @@
 
     <div class="form-group" style="position: relative;">
       <label for="pword" class="form-label">Password</label>
-      <input
-        id="pword"
-        [type]="showPassword ? 'text' : 'password'"
-        placeholder="Password"
-        name="pword"
-        autocomplete="current-password"
-        [(ngModel)]="password"
-        #pword="ngModel"
-        class="form-control"
-        required
+      <input id="pword" [type]="showPassword ? 'text' : 'password'" placeholder="Password" name="pword"
+        autocomplete="current-password" [(ngModel)]="password" #pword="ngModel" class="form-control" required
         [class.is-valid]="pword.valid && (pword.dirty || pword.touched)"
-        [class.is-invalid]="pword.invalid && (pword.dirty || pword.touched)"
-      />
-      <i
-        [title]="showPassword ? 'Hide Password' : 'Show Password'"
-        class="toggle-icon fas"
-        [ngClass]="showPassword ? 'fa-eye text-success' : 'fa-eye-slash'"
-        (click)="togglePassword()"
-        style="position: absolute; right: 40px; top: 56%; cursor: pointer"
-      ></i>
-      <i
-        title="Clear Password"
-        class="clear-icon fas fa-times-circle"
-        (click)="clearPassword()"
-        *ngIf="password && password.length > 0"
-        style="position: absolute; right: 10px; top: 56%; cursor: pointer"
-      ></i>
+        [class.is-invalid]="pword.invalid && (pword.dirty || pword.touched)" />
+      <i [title]="showPassword ? 'Hide Password' : 'Show Password'" class="toggle-icon fas"
+        [ngClass]="showPassword ? 'fa-eye text-success' : 'fa-eye-slash'" (click)="togglePassword()"
+        style="position: absolute; right: 40px; top: 56%; cursor: pointer"></i>
+      <i title="Clear Password" class="clear-icon fas fa-times-circle" (click)="clearPassword()"
+        *ngIf="password && password.length > 0" style="position: absolute; right: 10px; top: 56%; cursor: pointer"></i>
       <div *ngIf="pword.invalid && (pword.dirty || pword.touched)" class="invalid-feedback d-block">
         <span *ngIf="pword.hasError('required')">This field is required</span>
       </div>
@@ -70,23 +42,37 @@
     </div>
 
     <div class="form-group mt-4" style="position: relative;">
-      <button
-        type="submit"
-        class="btn btn-success w-100 text-uppercase fw-semibold p-3"
-        [disabled]="form.invalid || loading"
-        [value]="loading ? 'Logging In...' : 'Login'"
-        style="cursor: pointer"
-        (click)="login()"
-      >
+      <button type="submit" class="btn btn-success w-100 text-uppercase fw-semibold p-3"
+        [disabled]="form.invalid || loading" [value]="loading ? 'Logging In...' : 'Login'" style="cursor: pointer"
+        (click)="login()">
         {{ loading ? 'Logging In...' : 'Login' }}
       </button>
       <div *ngIf="loading" class="spinner-border spinner-border-sm text-light"
         style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);"></div>
     </div>
 
+    <div class="or-divider">OR</div>
+
+    <div class="row mb-4">
+      <div class="col-sm-6 mb-2 mb-sm-0">
+        <button type="button" class="btn custom-social-btn w-100 p-3 fw-semibold">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg" alt="Google" width="20"
+            height="20" class="me-2"> Login with Google
+        </button>
+      </div>
+      <div class="col-sm-6">
+        <button type="button" class="btn custom-social-btn w-100 p-3 fw-semibold">
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/32px-Facebook_f_logo_%282019%29.svg.png"
+            alt="Facebook" width="20" height="20" class="me-2"> Login with Facebook
+        </button>
+      </div>
+    </div>
+
     <p class="text-center my-2">
       Don&apos;t have an account?
-      <a routerLink="/signup" style="cursor: pointer; text-decoration: none; color: #31795a; font-weight: 700;">Sign Up</a>
+      <a routerLink="/signup" style="cursor: pointer; text-decoration: none; color: #31795a; font-weight: 700;">Sign
+        Up</a>
     </p>
   </form>
 </div>
