--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="loginForm">
   <div class="loginWelcome text-center mb-3">
-    <h2 class="loginH1">Hi, welcome back</h2>
+    <h2 class="loginH1">Hi, Welcome Back!</h2>
     <p class="loginSub">Log in to your account to continue</p>
   </div>
   <form #form="ngForm" novalidate>
@@ -55,13 +55,13 @@
 
     <div class="row mb-4">
       <div class="col-sm-6 mb-2 mb-sm-0">
-        <button type="button" class="btn custom-social-btn w-100 p-3 fw-semibold">
+        <button type="button" class="btn custom-social-btn w-100 p-3 fw-normal">
           <img src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg" alt="Google" width="20"
             height="20" class="me-2"> Login with Google
         </button>
       </div>
       <div class="col-sm-6">
-        <button type="button" class="btn custom-social-btn w-100 p-3 fw-semibold">
+        <button type="button" class="btn custom-social-btn w-100 p-3 fw-normal">
           <img
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/32px-Facebook_f_logo_%282019%29.svg.png"
             alt="Facebook" width="20" height="20" class="me-2"> Login with Facebook
