--- a/src/app/components/sections/category-list/category-list.component.css
+++ b/src/app/components/sections/category-list/category-list.component.css
@@ -95,4 +95,14 @@
   .category-card .title {
     font-size: 20px;
   }
+
+  .category-header {
+  font-size: 45px;
+  }
+}
+
+@media (min-width: 992px) {
+  .category-header {
+    font-size: 50px;
+  }
 }
