--- a/src/app/components/sections/category-list/category-list.component.html
+++ b/src/app/components/sections/category-list/category-list.component.html
@@ -5,7 +5,7 @@
   </span>
 </div>
 
-<div class="d-flex flex-wrap justify-content-center gap-3">
+<div class="d-flex flex-wrap justify-content-center gap-3 my-lg-4">
   <div class="category-card-wrapper" *ngFor="let category of categories">
     <div class="category-card text-center">
       <div class="icon">
