--- a/src/app/components/sections/fancybanner/fancybanner.component.css
+++ b/src/app/components/sections/fancybanner/fancybanner.component.css
@@ -127,8 +127,15 @@
   }
 }
 
-
 @media (min-width: 992px) {
+  .achievements-wrapper .achievement h1 {
+    font-size: 3rem !important;
+  }
+
+  .banner-container {
+    margin: 10rem 0;
+  }
+
   .fancy-banner {
     display: flex;
     flex-direction: row-reverse;
@@ -156,7 +163,6 @@
 
   .fancy-banner-img img {
     width: 100%;
-    /* height: auto; */
     height: 100%;
     object-fit: cover;
     border-top-left-radius: 30px;
@@ -164,10 +170,7 @@
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
   }
-
 }
-
-
 
 /* Desktop and Up (>=1200px) */
 @media (min-width: 1200px) {
@@ -191,7 +194,7 @@
   .achievements-wrapper {
     flex-direction: row;
     justify-content: center;
-    gap: 6rem;
+    gap: 8rem !important;
     padding: 6rem 2rem;
   }
 
