--- a/src/app/components/sections/job-card/job-card.component.html
+++ b/src/app/components/sections/job-card/job-card.component.html
@@ -7,10 +7,8 @@
   </div>
 
   <div class="view-jobs-wrapper">
-    <div
-      *ngFor="let job of jobs"
-      class="job-card d-flex flex-column flex-md-row justify-content-between align-items-center align-items-md-center"
-    >
+    <div *ngFor="let job of jobs"
+      class="job-card d-flex flex-column flex-md-row justify-content-between align-items-center align-items-md-center">
       <!-- LEFT + MAIN INFO -->
       <div class="d-flex gap-3 w-100 align-items-start">
         <img [src]="job.logo" alt="Company Logo" class="job-logo" />
@@ -35,14 +33,8 @@
           <div class="job-actions">
             <div class="savejob-icon-wrapper" title="Save Job">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                <path
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="m19 21l-7-4l-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"
-                />
+                <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="m19 21l-7-4l-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z" />
               </svg>
             </div>
             <button class="apply-btn">Apply</button>
@@ -56,8 +48,9 @@
     <a class="btn" href="">Explore all jobs &gt;</a>
   </div>
 
+
   <div class="job-posting">
-    <div>Do you want to post a job for your company? <span>We can help.</span></div>
-    <a href="">Click Here</a>
+    <div class="job-text">Do you want to post a job for your company? We can help.</div>
+    <span class="job-link"><a href="">Click here</a></span>
   </div>
 </div>
