wip: massive changes, added navbar and footer components to pages

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="loginForm">
   <div class="loginWelcome text-center mb-3">
     <h2 class="loginH1">Hi, Welcome Back!</h2>
@@ -75,3 +76,4 @@
     </p>
   </form>
 </div>
+<app-footer></app-footer>
