--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="signupWrapper">
   <div class="signupContainer">
     <div class="signupHeader">
@@ -123,3 +124,4 @@
     </div>
   </div>
 </div>
+<app-footer></app-footer>
