--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="contact-container">
   <!-- Map Section -->
   <div class="map-section">
@@ -151,3 +152,4 @@
     </div>
   </div>
 </div>
+<app-footer></app-footer>
