--- a/src/app/cookiepolicy/cookiepolicy.component.html
+++ b/src/app/cookiepolicy/cookiepolicy.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="cookie-policy-container">
   <h1>Cookie Policy for JobNet</h1>
 
@@ -20,3 +21,4 @@
   <h2>Contact Us</h2>
   <p>If you have any questions about this Cookie Policy, contact us at: <strong>jobnetsupport&#64;new.com</strong></p>
 </div>
+<app-footer></app-footer>
