--- a/src/app/job-details/job-details.component.html
+++ b/src/app/job-details/job-details.component.html
@@ -1,4 +1,4 @@
-
+<app-navbar></app-navbar>
 <div class="container py-5">
   <ng-container *ngIf="isLoading">
     <p>Loading job details...</p>
@@ -47,3 +47,4 @@
 </div>
 
 <app-cta></app-cta>
+<app-footer></app-footer>
