--- a/src/app/job-wishlist/job-wishlist.component.html
+++ b/src/app/job-wishlist/job-wishlist.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="job-wishlist-container">
   <!-- Header Section -->
   <div class="wishlist-header">
@@ -120,3 +121,4 @@
   </div>
 </div>
 <app-cta></app-cta>
+<app-footer></app-footer>
