--- a/src/app/jobs-list/jobs-list.component.html
+++ b/src/app/jobs-list/jobs-list.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="job-listing-container">
   <div class="container mt-5">
     <div *ngIf="loading" class="text-center my-5">
@@ -28,3 +29,4 @@
 </div>
 
 <app-cta></app-cta>
+<app-footer></app-footer>
