--- a/src/app/privacypolicy/privacypolicy.component.html
+++ b/src/app/privacypolicy/privacypolicy.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <section class="policy-container container py-5">
   <div class="card shadow-sm p-4">
     <h1 class="mb-4 fw-bold">Privacy Policy for JobNet</h1>
@@ -23,3 +24,4 @@
     </p>
   </div>
 </section>
+<app-footer></app-footer>
