--- a/src/app/terms/terms.component.html
+++ b/src/app/terms/terms.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <section class="policy-container container py-5">
   <div class="card shadow-sm p-4">
     <h1 class="mb-4 fw-bold">Terms of Service for JobNet</h1>
@@ -38,3 +39,4 @@
     </p>
   </div>
 </section>
+<app-footer></app-footer>
