--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -55,13 +55,13 @@
 
     <div class="row mb-4">
       <div class="col-sm-6 mb-2 mb-sm-0">
-        <button type="button" class="btn custom-social-btn w-100 p-3 fw-normal">
+        <button type="button" class="btn custom-social-btn w-100 p-3 fw-normal" (click)="googleLogin()" [disabled]="loading">
           <img src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg" alt="Google" width="20"
             height="20" class="me-2"> Login with Google
         </button>
       </div>
       <div class="col-sm-6">
-        <button type="button" class="btn custom-social-btn w-100 p-3 fw-normal">
+        <button type="button" class="btn custom-social-btn w-100 p-3 fw-normal" (click)="facebookLogin()" [disabled]="loading">
           <img
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/32px-Facebook_f_logo_%282019%29.svg.png"
             alt="Facebook" width="20" height="20" class="me-2"> Login with Facebook
